tablet-nav-bar-fixed, logo-spacing-fixed

--- a/css/header.css
+++ b/css/header.css
@@ -17,7 +17,7 @@
     display: none;
 }
 
-/* Desktop (1440px and above) */
+/* Desktop (1440px and below) */
 @media screen and (max-width: 1440px) {
     :root {
         --max-width: 1200px; 
@@ -189,27 +189,36 @@
 
     .site-title {
         font-size: 32px;
-        margin: 10px 0 30px;
+        margin: 0 0 20px 20px;
     }
 
     .metrolics-logo {
         width: 24px; 
-        margin-bottom: 10px;
     }
 
+    .main-nav {
+        max-width: 632px; 
+        margin: 0; 
+    }
+    
     .main-nav ul {
         flex-direction: row; 
-        max-width: var(--max-width);
     }
 
     .main-nav li {
-        height: 64px;
+        flex: 0 0 auto;
+        width: 126.2px;
+        height: 60px;
+
     }
 
     .main-nav a {
-        width: 126.4px;
-        height: 64px;
+        width: 100%; 
+        height: 100%; 
+        padding: 0 0 10px 10px;
+        font-size: var(--nav-font-size);
     }
+        
 
     .hero {
         background-size: 632px 320px;
